cargo-features = ["edition"]

[package]
edition = '2018'
name = "playground-tcp"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/playground-tcp"
documentation = "https://docs.rs/playground-tcp"
description = "Trying out Tokio TCP."
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
structopt = "0.2.10"
clap-port-flag = "0.3.0"

[dev-dependencies]
